# call-use

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  mkdocs.yml  pyproject.toml  skill.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  publish.yml
call_use/: __init__.py  _lk_utils.py  agent.py  cli.py  evidence.py  mcp_server.py  models.py  phone.py  rate_limit.py  sdk.py  server.py
demo-video/: .gitignore  generate-voiceover.ts  package-lock.json  package.json  tsconfig.json
demo-video/src/: CallUseDemo.tsx  Root.tsx
demo-video/src/lib/: animations.ts  theme.ts
demo-video/src/scenes/: CTAScene.tsx  CallScene.tsx  CodeScene.tsx  PainScene.tsx  ResultScene.tsx  TurnScene.tsx
docs/: CNAME  changelog.md  contributing.md  index.md
docs/architecture/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2026-03-14-introducing-call-use.md
docs/getting-started/: configuration.md  first-call.md  index.md  installation.md
docs/guides/: agent-frameworks.md  approval-flow.md  cli.md  human-takeover.md  mcp-server.md  rest-api.md  sdk.md
docs/plans/: 2026-03-08-call-use-implementation-plan.md  2026-03-08-call-use-prd-v1.md  2026-03-08-call-use-prd-v2.md
docs/reference/: api.md  configuration.md  events.md  models.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-03-14-call-use-v1-release.md  2026-03-14-sp1-cli-mcp.md  2026-03-14-sp2-cloud-backend.md  2026-03-14-sp3-demo-app.md  2026-03-14-sp4-launch-polish.md
docs/superpowers/specs/: 2026-03-14-release-audit-design.md
examples/: README.md  appointment_scheduler.py  claude_code_setup.md  crewai_integration.py  cs_refund_agent.py  error_handling.py  insurance_claim.py  langchain_tool.py  multi_call_workflow.py  openai_agents.py  subscription_cancellation.py  webhook_integration.py
tests/: conftest.py  test_agent.py  test_agent_bdd.py  test_bdd_call_lifecycle.py  test_bdd_input_validation.py  test_bdd_scenarios.py  test_bdd_security_resilience.py  test_bdd_user_journeys.py  test_cli.py  test_evidence.py  test_mcp_server.py  test_models.py  test_phone.py  test_property.py  test_rate_limit.py  test_sdk.py  test_server.py  test_user_journeys.py
