[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "call-use"
dynamic = ["version"]
description = "Open-source outbound call-control runtime for agent builders"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-deepgram~=1.4",
    "livekit-plugins-openai~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
call-use-worker = "call_use.agent:main"

[tool.setuptools.dynamic]
version = {attr = "call_use._version.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
