[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "call-use"
dynamic = ["version"]
description = "Open-source outbound call-control runtime for agent builders"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "agent-next"}]
keywords = ["ai", "agent", "phone", "call", "voice", "livekit", "browser-use", "computer-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-openai~=1.4",
    "livekit-plugins-deepgram~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "httpx",
    "click>=8.0",
    "mcp[server]>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
call-use-worker = "call_use.agent:main"
call-use = "call_use.cli:main"
call-use-mcp = "call_use.mcp_server:main"

[project.urls]
Homepage = "https://github.com/agent-next/call-use"
Repository = "https://github.com/agent-next/call-use"
Issues = "https://github.com/agent-next/call-use/issues"

[tool.setuptools.dynamic]
version = {attr = "call_use._version.__version__"}

[tool.setuptools.packages.find]
include = ["call_use*"]

[tool.setuptools.package-data]
call_use = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
